--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+#General
 spring.application.name=TestTaskPiche
+server.port=8080
+spring.threads.virtual.enabled=true
+server.servlet.context-path=/api
+
+#Db
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.password=rootpwd
+spring.datasource.username=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://db:5432/postgres
+
+spring.flyway.default-schema=public
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
