--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ spring.datasource.url=jdbc:postgresql://db:5432/postgres
 spring.flyway.default-schema=public
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
+
+#Metrics
+management.endpoints.web.exposure.include=health,prometheus
+management.endpoint.prometheus.enabled=true
+management.endpoint.health.enabled=true
